# aisl2025

./: README.md  config.yaml  deploy.py  deploy.sh  deploy_medical_qa.py  flow.mermaid  pyproject.toml  tavily_schema.json
client/: .gitignore  main.py  test.sh
medical_qa/: __init__.py  config.py  ochestrator.py
medical_qa/agents/: __init__.py  conversation_init.py  doctor.py  drug_info.py  information_retriever.py  patient.py  regulator.py
medical_qa/tools/: __init__.py
search_agent/: agent.py
server/: __init__.py  agent.py  config.py  ochestrator.py  ochestrator_doctor_assistant.py  ochestrator_explainer.py
server/agents/: __init__.py  conversation_init.py  doctor.py  final_report.py  information_retriever.py  labtest_suggest.py  patient.py  regulator.py
server/tools/: internet.py
